--- a/app/globals.css
+++ b/app/globals.css
@@ -1,82 +1,65 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --max-width: 1200px;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  /* === Theme variables === */
+  /* Main */
+  --themeDarker: #020202;
+  --themeDark: #080808;
+  --themeDarkAlt: #1f1f1f;
+  --themePrimary: #333;
+  --themeSecondary: #2d2d2d;
+  --themeTertiary: #1f1f1f;
+  --themeLight: #474747;
+  --themeLighter: #646464;
+  --themeLighterAlt: #8d8d8d;
+  /* Foreground */
+  --black: #020202;
+  --neutralDark: #050505;
+  --neutralPrimary: #323130;
+  --neutralPrimaryAlt: #8d8b8a;
+  --neutralSecondary: #a3a2a0;
+  --neutralTertiary: #bab8b7;
+  --white: #f0f0f0;
+  /* More */
+  --neutralTertiaryAlt: #f7f7fd;
+  /* --neutralDark: #605e5d; */
+  --neutralQuaternaryAlt: #f5f5fd;
+  --neutralLight: #f4f4fd;
+  --neutralLighter: #f3f3fd;
+  --neutralLighterAlt: #f3f3fd;
+  /* Extra theme color  */
+  --extraDarker: #04040a;
+  --extraDark: #100f29;
+  --extraDarkAlt: #1d1c4d;
+  --extraPrimary: #3a3799;
+  --extraSecondary: #5651e0;
+  --extraTertiary: #635dff;
+  --extraLight: #716cff;
+  --extraLighter: #8783ff;
+  --extraLighterAlt: #a7a4ff;
+  --extraWhite: #e7e4ff;
+  /* Extra color */
+  --errorColor: #eb505a;
+  --dangerColor: #46110e;
+  --warningColor: #f5b700;
+  --successColor: #4CAF50;
+  /* Activity in scheldue colors */
+  --activityFontColor: var(--extraWhite);
+  --activityTraining: var(--extraSecondary);
+  --activityTournament: #b65e5e;
+  --activityLeague: #b59545;
+  --activityTactics: var(--extraTertiary);
+  --activityMedical: #a0182d;
+  --activityMeeting: #ce3a13;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  text-decoration-color: var(--white);
 }
 
 html,
@@ -84,24 +67,24 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  min-height: 100dvh;
+}
+
+body,
+main {
+  background-color: var(--black);
+  color: var(--white)
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: var(--white)
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+.content-wrapper {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: .75rem;
 }
