--- a/components/styles/HeaderBar.module.css
+++ b/components/styles/HeaderBar.module.css
@@ -2,6 +2,9 @@
     background-color: var(--themeDarkAlt);
     padding: var(--headerYPaddings) 1em;
     width: 100vw;
+    position: sticky;
+    top: 0;
+    box-shadow: 0px 0px 3px 1px var(--neutralPrimaryAlt);
 }
 
 .wrapper {
