--- a/components/styles/HeaderBar.module.css
+++ b/components/styles/HeaderBar.module.css
@@ -1,7 +1,8 @@
 .header {
   background-color: var(--themeDarkAlt);
   padding: var(--headerYPaddings) 1em;
-  width: 100vw;
+  min-width: 100vw;
+  width: 100%;
   position: sticky;
   top: 0;
   box-shadow: 0px 0px 3px 1px var(--neutralPrimaryAlt);
