Fix mobile table header

--- a/app/players/Players.module.css
+++ b/app/players/Players.module.css
@@ -53,6 +53,10 @@
     flex-direction: row;
   }
 
+  .table thead tr {
+    display: none;
+  }
+
   .table > tbody > tr > td:first-child,
   .table > tbody > tr > td:nth-child(n + 10) {
     display: none;
