Seasons Added -Seasons select -Leaderboard for season -Stats for season -1800 sec for refresh fetch -tailwind + ui libs -image fixes -home page added

--- a/components/styles/DotaTeam.module.css
+++ b/components/styles/DotaTeam.module.css
@@ -42,3 +42,11 @@
 .team span {
   color: var(--successColor);
 }
+
+@media screen and (max-width: 768px) {
+  .table td {
+    display: grid;
+    text-align: left;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
