--- a/app/globals.css
+++ b/app/globals.css
@@ -114,6 +114,7 @@ a {
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
     --ring: 20.5 90.2% 48.2%;
+    --radius: 0.5rem;
   }
  
   .light {
